Expose getToken API without orgId in path and with support to Text/Plain response type
